<resources>
    <string name="app_name">Cars</string>
    <string name="menu">Menu</string>
    <string name="more">More</string>
    <string name="choose_a_car">Choose a Car</string>
    <string name="_23_results">23 Results</string>
    <string name="car">Car</string>
    <string name="select">Select</string>
    <string name="automatic">Automatic</string>
    <string name="pickup_amp_return"><![CDATA[Pickup & Return]]></string>
    <string name="air_con">Air Con</string>
    <string name="back">Back</string>
    <string name="go_to_checkout">Go to Checkout</string>
</resources>